fix: graphic visible on mobile

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -57,7 +57,7 @@ section
   padding-bottom: var(--spacing-three)
   padding-left: var(--side-spacing)
   padding-right: var(--side-spacing)
-  z-index: -1
+  z-index: 0
   &.left
     justify-content: flex-start
   &.center
